--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mission 5 Test</title>
-  <link rel="stylesheet" href="frontend/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
